# stockreader

./: .env_test  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config-docker.toml  config-standalone.toml  config-test.toml  config.toml  docker-compose.yaml  docker-compose.yml  log4rs.yaml  pom.xml  requirements.txt
.github/workflows/: makefile.yml
migrations/2021-12-21-003440_create_symbols/: down.sql  up.sql
migrations/2022-01-17-231627_create_stats/: down.sql  up.sql
migrations/2022-01-24-195949_create_historical_prices/: down.sql  up.sql
resources/: NASDAQ-Most-Active-Stocks-2016-03-21.csv  NYSE-Most-Active-Stocks-2016-03-14.csv  NYSE-Most-Active-Stocks-2016-03-21.csv  Nasdaq-Biggest-Percentage-Decliners-2016-03-21.csv  Nasdaq-Biggest-Percentage-Gainers-2016-03-21.csv  Nasdaq-Most-Active-Stocks-2016-03-21.csv
scripts/: createdb.js  deploy_locally.sh  generate-requirements-txt.sh  integration_tests.sh  package.sh  start-docker.sh  start-standalone.sh  start.sh  stop.sh  test.sh  unit_tests.sh
src/: admin_api.py  api.py  aws.rs  client.rs  config.rs  domain.py  download.py  job.py  lib.rs  load.py  main.py  main.rs  models.rs  mongo.py  read.py  repository.rs  save.py  schema.rs  service.rs  stockboard.py  stockreader.py  stocks_api.py
src/admin/: admin_api.py
src/config/: env.rs  (+4 more)
test/: api_test.py  context.py  domain_test.py  download_test.py  factories.py  job_test.py  json_test.py  mongo_test.py  read_test.py  stocks_api_test.py  testDomain.py
tests/: integration_tests.rs
v1/: Dockerfile  docker-compose.yml
(+93 files in other folders)
